[ UPDATE ] OAS and Skeleton update
