# openapi/out/python-fastapi/src/openapi_server/models/inline_object4.py
@@ -1,0 +1,26 @@
+# coding: utf-8
+
+from __future__ import annotations
+from datetime import date, datetime  # noqa: F401
+
+import re  # noqa: F401
+from typing import Any, Dict, List, Optional  # noqa: F401
+
+from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
+
+
+class InlineObject4(BaseModel):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+
+    InlineObject4 - a model defined in OpenAPI
+
+        product_id: The product_id of this InlineObject4 [Optional].
+        quantity: The quantity of this InlineObject4 [Optional].
+    """
+
+    product_id: Optional[int] = None
+    quantity: Optional[int] = None
+
+InlineObject4.update_forward_refs()
