# openapi/out/python-fastapi/src/openapi_server/models/product.py
@@ -1,0 +1,32 @@
+# coding: utf-8
+
+from __future__ import annotations
+from datetime import date, datetime  # noqa: F401
+
+import re  # noqa: F401
+from typing import Any, Dict, List, Optional  # noqa: F401
+
+from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
+
+
+class Product(BaseModel):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+
+    Product - a model defined in OpenAPI
+
+        product_id: The product_id of this Product [Optional].
+        product_name: The product_name of this Product [Optional].
+        price: The price of this Product [Optional].
+        image: The image of this Product [Optional].
+        description: The description of this Product [Optional].
+    """
+
+    product_id: Optional[int] = None
+    product_name: Optional[str] = None
+    price: Optional[int] = None
+    image: Optional[str] = None
+    description: Optional[str] = None
+
+Product.update_forward_refs()
